# concordance

./: .gitignore  CODEOWNERS  OWNERS  README.md
.ci/: provider.yml
capability-provider/: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  codegen.toml  provider.mk  run-test.sh
capability-provider/src/: config.rs  events.rs  eventsourcing.rs  lib.rs  process_manager.rs  router.rs  state.rs  wcprovider.rs
capability-provider/src/consumers/: command_consumer.rs  command_worker.rs  event_consumer.rs  event_worker.rs  manager.rs  mod.rs
capability-provider/src/natsclient/: mod.rs  natsconn.rs
capability-provider/src/workers/: aggregate.rs  aggregate_command.rs  aggregate_event.rs  general_event.rs  mod.rs  notifier.rs  process_manager.rs  projector.rs
crates/: README.md
crates/concordance-gen/: Cargo.toml  README.md  build.rs  codegen.toml
crates/concordance-gen-core/: Cargo.toml  README.md
crates/concordance-gen-core/src/: lib.rs  model.rs  templates.rs
crates/concordance-gen-core/src/generator/: aggregate.rs  genhandler.rs  mod.rs  procmgr.rs
crates/concordance-gen-core/src/model/: eventcatalog.rs  mod.rs
crates/concordance-gen-core/templates/: agg_impl.hbs  agg_trait.hbs  gen_evt_handler.hbs  proc_mgr.hbs
crates/concordance-gen-macro/: Cargo.toml  README.md
crates/concordance-gen-macro/src/: lib.rs
crates/concordance-gen/src/: codegen.rs  docgen.rs  lib.rs  model.rs  templates.rs
crates/concordance-gen/templates/: agg_impl.hbs  agg_index.hbs  cmd_index.hbs  evt_handler_impl.hbs  evt_index.hbs  gen_impl.hbs  notifier_index.hbs  pm_impl.hbs  pm_index.hbs  proj_index.hbs  system_traits.hbs
examples/: README.md
examples/bankaccount/: Makefile  README.md  bank_issuer.nk  bank_wadm.yaml  bankaccount-model.ttl
examples/bankaccount/aggregate/: Cargo.toml  Makefile  README.md  build.rs  codegen.toml  wasmcloud.toml
examples/bankaccount/aggregate/.keys/: bankaccount_aggregate_module.nk
examples/bankaccount/aggregate/src/: commands.rs  events.rs  eventsourcing.rs  genimpl.rs  lib.rs  state.rs  system_traits.rs
examples/bankaccount/eventcatalog/: eventcatalog.config.js  package-lock.json  package.json
examples/bankaccount/eventcatalog/events/AccountCreated/: index.md  schema.json
examples/bankaccount/eventcatalog/events/CommitFunds/: index.md  schema.json
examples/bankaccount/eventcatalog/events/CreateAccount/: index.md  schema.json
examples/bankaccount/eventcatalog/events/DepositFunds/: index.md  schema.json
examples/bankaccount/eventcatalog/events/FundsCommitted/: index.md  schema.json
examples/bankaccount/eventcatalog/events/FundsDeposited/: index.md  schema.json
examples/bankaccount/eventcatalog/events/FundsReleased/: index.md  schema.json
examples/bankaccount/eventcatalog/events/FundsReserved/: index.md  schema.json
examples/bankaccount/eventcatalog/events/FundsWithdrawn/: index.md  schema.json
examples/bankaccount/eventcatalog/events/ReleaseFunds/: index.md  schema.json
examples/bankaccount/eventcatalog/events/ReserveFunds/: index.md  schema.json
examples/bankaccount/eventcatalog/events/WireFunds/: index.md  schema.json
examples/bankaccount/eventcatalog/events/WireTransferFailed/: index.md  schema.json
examples/bankaccount/eventcatalog/events/WireTransferInitiated/: index.md  schema.json
examples/bankaccount/eventcatalog/events/WireTransferSucceeded/: index.md  schema.json
examples/bankaccount/eventcatalog/events/WithdrawFunds/: index.md  schema.json
examples/bankaccount/eventcatalog/services/Bank Account Aggregate/: index.md
examples/bankaccount/eventcatalog/services/Bank Account Projector/: index.md
examples/bankaccount/model/: Cargo.toml  README.md  build.rs
examples/bankaccount/model/docs/: README.md  agg_index.md  cmd_index.md  evt_index.md  filtered.ttl  gen_svg.sh  notifier_index.md  pm_index.md  proj_index.md
examples/bankaccount/model/src/: commands.rs  events.rs  lib.rs  state.rs
examples/bankaccount/process_manager/: Cargo.toml  Makefile  README.md  build.rs  interest.json  wasmcloud.toml
examples/bankaccount/process_manager/.cargo/: config.toml
examples/bankaccount/process_manager/.keys/: bankaccount_processmanager_module.nk
examples/bankaccount/process_manager/src/: eventsourcing.rs  genimpl.rs  lib.rs  system_traits.rs
examples/bankaccount/projector/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  codegen.toml  wasmcloud.toml
examples/bankaccount/projector/.keys/: bankaccount_projector_module.nk
examples/bankaccount/projector/src/: genimpl.rs  lib.rs  store.rs
examples/bankaccount/scripts/: README.md  close_account_cmd.json  create_account_cmd.json  deposit_cmd_1.json  deposit_cmd_2.json  ibt_completed.json  ibt_create_account_cmd.json  ibt_failed.json  ibt_request_wire_xfer.json  ibt_transfer_completed.json  interbank_1.sh  interbank_fail.sh  interbank_succeed.sh  linkdefs.sh  scenario_1.sh  withdraw_cmd_1.json
examples/lunar_frontiers/: DDIL.md  README.md
examples/lunar_frontiers/aggregate-rover/: Cargo.toml  build.rs  codegen.toml
examples/lunar_frontiers/aggregate-rover/.cargo/: config.toml
examples/lunar_frontiers/aggregate-rover/src/: eventsourcing.rs  genimpl.rs  lib.rs  system_traits.rs
examples/lunar_frontiers/eventcatalog/: README.md  eventcatalog.config.js  package-lock.json  package.json
examples/lunar_frontiers/interface/: README.md  aggregate.smithy  eventsourcing.smithy  process_manager.smithy
examples/lunar_frontiers/model/: Cargo.toml  README.md  filtered.ttl  gen_svg.sh  lunar_frontiers.ttl
examples/lunar_frontiers/model/src/: commands.rs  events.rs  lib.rs  state.rs
examples/lunar_frontiers/rover-aggregate/: Cargo.toml  README.md
examples/lunar_frontiers/rover-aggregate/src/: commands.rs  events.rs  lib.rs  state.rs
examples/lunar_frontiers/rover-procman/: Cargo.toml
examples/lunar_frontiers/rover-procman/src/: lib.rs
examples/lunar_frontiers/rover-projector/: Cargo.toml
examples/lunar_frontiers/rover-projector/src/: lib.rs
interface/: aggregate.smithy  eventsourcing.smithy  process_manager.smithy
(+35 files in other folders)
