[package]
name = "concordance"
version = "0.1.1"
edition = "2021"


[dependencies]
async-trait = "0.1"
async-nats = "0.30.0"
anyhow = "1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
wasmbus-rpc = {version = "0.14.0", features = ["otel"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.0", features  = ["v4"]}
tracing = "0.1"
tracing-futures = "0.2.5"
base64 = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
case = "1.0.0"
cloudevents-sdk = "0.7"
chrono = "0.4.23" # needed by cloudevents

[build-dependencies]
weld-codegen = "0.7.0"
