[package]
name = "concordance-gen-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
rust-embed = {version = "6.4.0", features = ["debug-embed"] }
rdf = "0.1.4"
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
Inflector = "0.11.4"
handlebars = "4.3.7"