[package]
name = "concordance-gen-core"
version = "0.1.0"
edition = "2021"
description = "Core shared functionality for Concordance code generation"
readme = "README.md"


[dependencies]
anyhow = "1.0.44"
rust-embed = {version = "6.4.0", features = ["debug-embed"] }
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
Inflector = "0.11.4"
handlebars = "4.3.7"
serde_yaml = "0.9.25"
typify = "0.0.13"
schemars = "0.8.12"