[package]
name = "concordance-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
rdf = "0.1.4"
handlebars = "4.3.3"
Inflector = "0.11.4"
rust-embed = {version = "6.4.0", features = ["debug-embed"] }
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
concordance-gen-macro = { path = "../concordance-gen-macro" }
wasmbus-rpc = "0.14.0"
async-trait = "0.1.72"
serde_bytes = "0.11.12"

[build-dependencies]
weld-codegen = "0.7.0"