[package]
name = "bankaccount-aggregate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bankaccount_aggregate"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1"
futures = { version = "0.3", features = ["executor"] }
serde_bytes = "0.11"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
wasmbus-rpc = "0.14.0"
concordance-gen = { path = "../../../crates/concordance-gen"}
wasmcloud-interface-logging = {version = "0.10.0", features = ["sync_macro"]}
regress = "0.7.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true