[package]
name = "bankaccount-processmanager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bankaccount_processmanager"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["executor"] }
serde_bytes = "0.11"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
wasmbus-rpc = "0.12.0"
bankaccount-model = { path = "../model" }
wasmcloud-interface-logging = {version = "0.8.1", features = ["sync_macro"]}

[build-dependencies]
weld-codegen = "0.7.0"