[package]
name = "bankaccount-projector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bankaccount_projector"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["executor"] }
serde_bytes = "0.11"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
wasmbus-rpc = "0.14.0"
bankaccount-model = { path = "../model" }
concordance-gen = { path = "../../../crates/concordance-gen"}
wasmcloud-interface-logging = {version = "0.10.0", features = ["sync_macro"]}
wasmcloud-interface-keyvalue = "0.11.0"
